map.html: More attribution
:)

--- a/map/map.html
+++ b/map/map.html
@@ -35,7 +35,7 @@
             zoom: 6
         });
         
-        var defaultAttrib = 'Map data: © <a href="https://openstreetmap.org/copyright">OpenStreetMap</a> contributors';
+        var defaultAttrib = 'Map data: © <a href="https://openstreetmap.org/copyright">OpenStreetMap</a> contributors | Location data by <a href="https://github.com/scaidermern/TrackMe">TrackMe</a>';
 
         // OSM tile layer
         var osmUrl = "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png";
